--- a/how.html
+++ b/how.html
@@ -8,6 +8,7 @@ title: How - Allmyles
     <div class="inner">
       <div class="content">
         <h1>How</h1>
+        <span>we imagine the future of travel</span>
         <a class="btn btn-get-started" href="http://dashboard.allmyles.com/">Just Try It</a>
       </div>
     </div>
