--- a/how.html
+++ b/how.html
@@ -9,7 +9,7 @@ title: How - Allmyles
       <div class="content">
         <h1>How</h1>
         <span>we imagine the future of travel</span>
-        <a class="btn btn-get-started" href="http://dashboard.allmyles.com/">Just Try It</a>
+        <a href="http://dashboard.allmyles.com/" class="btn btn-get-started">Just Try It</a>
       </div>
     </div>
   </div>
