--- a/why.html
+++ b/why.html
@@ -7,7 +7,7 @@ title: Why - Allmyles
   <div id="featured-image-why" class="featured-image">
     <div class="inner">
       <div class="content">
-        <h1>Selling travel <br> content</h1>
+        <h1>Selling travel</h1>
         <span>was the privilege of legacy agents</span>
         <a href="http://dashboard.allmyles.com/" class="btn btn-online-as-different">Online is different</a>
       </div>
