--- a/what_we_do.html
+++ b/what_we_do.html
@@ -8,6 +8,8 @@ title: What We Do - Allmyles
     <div class="inner">
       <div class="content">
         <h1>What We Do</h1>
+        <span>to make it simple</span>
+	      <a href="http://dashboard.allmyles.com/" class="btn btn-check-it-out">Check It Out</a>
       </div>
     </div>
   </section>
