--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@ title: Allmyles
         </div>
       </div>
       <div class="custom-package">
-        <span>* Fulfilment support for nonIATA partneres that costs additional 500 search per day<a href="/contact"> Contact Us!</a></span>
+        <span>* Fulfilment support for nonIATA partneres that costs additional 500 search per day<a href="/contact"> Contact Us for more!</a></span>
       </div>
       <div class="custom-package">
-        <span>Expecting 2000+ transactions per day? <a href="/contact"> Contact Us!</a></span>
+        <span>Expecting 2000+ transactions per day? <a href="/contact"> Contact Us for more!</a></span>
       </div>
 
     </section>
