--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ title: Allmyles
             <img src="/img/frontpage/pricing/geek.png" alt="construction worker portrait">
           </figure>
           <ul>
-            <li>No commitment</li>
+            <li>500 minimum daily search</li>
             <li>5,000 EUR one-off fee</li>
             <li>1,000 EUR of one-off fee used for first top-up</li>
             <li>* optional fulfilment support</li>
