cool and the staff updates
cool things like calendar, owcf and radius search added for extra fee

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ title: Allmyles
             <li>500 minimum daily search</li>
             <li>5,000 EUR one-off fee</li>
             <li>1,000 EUR of one-off fee used for first top-up</li>
-            <li>* optional fulfilment support</li>
+            <li>* cool & the staff (scroll down for details)</li>
             <li class="cost">0.09 EUR per search</li>
           </ul>
           <a class="btn btn-pricing" href="http://dashboard.allmyles.com/">Sign up</a>
@@ -163,14 +163,14 @@ title: Allmyles
             <li>1500 minimum daily search</li>
             <li>10,000 EUR one-off fee</li>
             <li>2,000 EUR of one-off fee used for first top-up</li>
-            <li>* optional fulfilment support</li>
+            <li>* cool & the staff (scroll down for details)</li>
             <li class="cost">0.06 EUR per search</li>
           </ul>
           <a class="btn btn-pricing" href="http://dashboard.allmyles.com/">Sign up</a>
         </div>
       </div>
       <div class="custom-package">
-        <span>* Fulfilment support for nonIATA partneres that costs additional 500 search per day<a href="/contact"> Contact Us for more!</a></span>
+        <span>* Calendar search is cool, One Way Combinable is even cooler, Radius Search is the coolest. Staff is a 24/7 post booking support for your travelers for free...beleive me, they need it. Chose any of cool things for 500 search each per day and get the Staff for free. Staff is compulsory for nonIATA partners. <a href="/contact"> Contact Us for more!</a></span>
       </div>
       <div class="custom-package">
         <span>Expecting 2000+ transactions per day? <a href="/contact"> Contact Us for more!</a></span>
