--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ title: Allmyles
             <li>500 minimum daily search</li>
             <li>5,000 EUR one-off fee</li>
             <li>1,000 EUR of one-off fee used for first top-up</li>
-            <li>* cool & the staff (scroll down for details)</li>
+            <li>* cool and the staff (scroll down for details)</li>
             <li class="cost">0.09 EUR per search</li>
           </ul>
           <a class="btn btn-pricing" href="http://dashboard.allmyles.com/">Sign up</a>
@@ -163,7 +163,7 @@ title: Allmyles
             <li>1500 minimum daily search</li>
             <li>10,000 EUR one-off fee</li>
             <li>2,000 EUR of one-off fee used for first top-up</li>
-            <li>* cool & the staff (scroll down for details)</li>
+            <li>* cool and the staff (scroll down for details)</li>
             <li class="cost">0.06 EUR per search</li>
           </ul>
           <a class="btn btn-pricing" href="http://dashboard.allmyles.com/">Sign up</a>
