--- a/news.html
+++ b/news.html
@@ -13,9 +13,9 @@ title: News - Allmyles
   </div>
 
   <div class="container">
-    <b>19th July 2017</b> - Allmyles API offers luggage purchase while flight booking. You can find <a href="http://docs.allmyles.com/#reference/flights/flight/get-flight-details>"documentation of baggage handling for details<a> </p>
-    <b>5th May 2017</b> - Allmyles API becomes able to find fares which are combinable in separate flight tickets. Please refer to our <a href="http://docs.allmyles.com/#reference/flights/flight-collection/search-flights>"documentation for details<a> Beware that the releveant ticket needs to be presented at check in. </p>
-    <b>1st February 2017</b> - Allmyles enabled <a href="http://docs.allmyles.com/#reference/flights/flight-collection/search-flights>"inconvenient results<a> to get the best flight fares even if the journey takes longer or needs more transfer window. </p>
+    <p><b>19th July 2017</b> - Allmyles API offers luggage purchase while flight booking. You can find <a href="http://docs.allmyles.com/#reference/flights/flight/get-flight-details>"documentation of baggage handling for details<a> </p>
+    <p><b>5th May 2017</b> - Allmyles API becomes able to find fares which are combinable in separate flight tickets. Please refer to our <a href="http://docs.allmyles.com/#reference/flights/flight-collection/search-flights>"documentation for details<a> Beware that the releveant ticket needs to be presented at check in. </p>
+    <p><b>1st February 2017</b> - Allmyles enabled <a href="http://docs.allmyles.com/#reference/flights/flight-collection/search-flights>"inconvenient results<a> to get the best flight fares even if the journey takes longer or needs more transfer window. </p>
     <p><b>20th December 2016</b> - Allmyles launched <a href="http://docs.allmyles.com/#reference/flights/flight-collection/search-flights>"calendar search<a> to let you search flights with flexible dates up to +/-3 days outbound and inbound too. </p>
     <p><b>10th September 2016</b> - Allmyles introduces <a href="http://docs.allmyles.com/#reference/flights/flight-collection/search-flights>"radius search<a> which enables Allmyles tenants to enhance flight results with departure and destination airprots within 300km around a given city. </p>
     <p><b>28th July 2016</b> - After months of hard work <a href="http://docs.allmyles.com/#reference/hotels"> Allmyles Hotel API </a> expanded. From now on we consolidate bookable hotel content from more than 50 hotel consolidators thus boosting individual property list from 150.000 to 1.100.000 hotels globally. </p>
