polish cool features

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ title: Allmyles
         </div>
       </div>
       <div class="custom-package">
-        <span>* Calendar search is cool, One Way Combinable is even cooler, Radius Search is the coolest. Staff is a 24/7 post booking support for your travelers for free...beleive me, they need it. Chose any of cool things for 500 search each per day and get the Staff for free. Staff is compulsory for nonIATA partners. <a href="/contact"> Contact Us for more!</a></span>
+        <span>* Calendar search is cool, One Way Combinable is even cooler, Radius Search is the coolest, read more in <a href="http://www.allmyles.com/news" >news section </a>. Staff is a 24/7 post booking support for you or your travelers that is compulsory for nonIATA partners. Chose two of cool features for no additional cost. <a href="/contact"> Contact Us for more!</a></span>
       </div>
       <div class="custom-package">
         <span>Expecting 2000+ transactions per day? <a href="/contact"> Contact Us for more!</a></span>
