--- a/news.html
+++ b/news.html
@@ -13,7 +13,7 @@ title: News - Allmyles
   </div>
 
   <div class="container">
-    <p><b>19th July 2017</b> - Allmyles API offers luggage purchase while flight booking. Please find documentation of<a href="http://docs.allmyles.com/#reference/flights/flight/get-flight-details"> baggage handling </a> for details. </p>
+    <p><b>19th July 2017</b> - Allmyles API offers extra luggage purchase while flight booking. Please find documentation of<a href="http://docs.allmyles.com/#reference/flights/flight/get-flight-details"> baggage handling </a> for details. </p>
     <p><b>5th May 2017</b> - Allmyles API becomes able to find fares which are combinable in separate flight tickets. Please refer to our <a href="http://docs.allmyles.com/#reference/flights/flight-collection/search-flights">documentation </a> for details. Beware that the releveant ticket needs to be presented at check in. </p>
     <p><b>1st February 2017</b> - Allmyles enabled <a href="http://docs.allmyles.com/#reference/flights/flight-collection/search-flights">inconvenient results </a> to get the best flight fares even if the journey takes longer or needs more transfer window. </p>
     <p><b>20th December 2016</b> - Allmyles launched <a href="http://docs.allmyles.com/#reference/flights/flight-collection/search-flights">calendar search </a> to let you search flights with flexible dates up to +/-3 days outbound and inbound too. </p>
