put sup to dev tier

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ title: Allmyles
       </header>
       <div class="row">
         <div class="col-md-4">
-          <h3>dev</h3>
+          <h3>dev<sup>*</sup></h3>
           <figure>
             <img src="/img/frontpage/pricing/dev.png" alt="baby portrait">
           </figure>
