fix sups entirely

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ title: Allmyles
             <li>500 minimum daily search</li>
             <li>5,000 EUR one-off fee</li>
             <li>1,000 EUR of one-off fee used for first top-up</li>
-            <li>* cool and the staff (scroll down for details)</li>
+            <li><sup>2<sup/> cool and the staff (scroll down for details)</li>
             <li class="cost">0.09 EUR per search</li>
           </ul>
           <a class="btn btn-pricing" href="http://dashboard.allmyles.com/">Sign up</a>
@@ -163,14 +163,15 @@ title: Allmyles
             <li>1500 minimum daily search</li>
             <li>10,000 EUR one-off fee</li>
             <li>2,000 EUR of one-off fee used for first top-up</li>
-            <li>* cool and the staff (scroll down for details)</li>
+            <li><sup>2<sup/> cool and the staff (scroll down for details)</li>
             <li class="cost">0.06 EUR per search</li>
           </ul>
           <a class="btn btn-pricing" href="http://dashboard.allmyles.com/">Sign up</a>
         </div>
       </div>
       <div class="custom-package">
-        <span>* Calendar search is cool, One Way Combinable is even cooler, Radius Search is the coolest, read more in <a href="http://www.allmyles.com/news" >news section </a>. Staff is a 24/7 post booking support for you or your travelers that is compulsory for nonIATA partners. Chose two of cool features for no additional cost. <a href="/contact"> Contact Us for more!</a></span>
+        <span><sup>1<sup/> Free for the first 3 months, then converts to geek tier.<a href="/contact"> Contact Us for more!</a></span>
+        <span><sup>2<sup/> Calendar search is cool, One Way Combinable is even cooler, Radius Search is the coolest, read more in <a href="http://www.allmyles.com/news" >news section </a>. Staff is a 24/7 post booking support for you or your travelers that is compulsory for nonIATA partners. Chose two of cool features for no additional cost. <a href="/contact"> Contact Us for more!</a></span>
       </div>
       <div class="custom-package">
         <span>Expecting 2000+ transactions per day? <a href="/contact"> Contact Us for more!</a></span>
