fix sup descriptions

--- a/index.html
+++ b/index.html
@@ -171,6 +171,8 @@ title: Allmyles
       </div>
       <div class="custom-package">
         <span><sup>1</sup> Free for the first 3 months, then converts to geek tier.<a href="/contact"> Contact Us for more!</a></span>
+      </div>
+      <div class="custom-package">
         <span><sup>2</sup> Calendar search is cool, One Way Combinable is even cooler, Radius Search is the coolest, read more in <a href="http://www.allmyles.com/news" >news section </a>. Staff is a 24/7 post booking support for you or your travelers that is compulsory for nonIATA partners. Chose two of cool features for no additional cost. <a href="/contact"> Contact Us for more!</a></span>
       </div>
       <div class="custom-package">
