fix signup link
signup link changed to https://dashboard.allmyles.com/signup

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Allmyles
       <div class="content">
         <h1>Sell travel online</h1>
         <span>convert your visitors into travelers</span>
-        <a class="btn btn-get-started" href="http://dashboard.allmyles.com/">Get Started</a>
+        <a class="btn btn-get-started" href="https://dashboard.allmyles.com/signup">Get Started</a>
       </div>
     </div>
   </section>
@@ -138,7 +138,7 @@ title: Allmyles
             <li>No one-off fee</li>
             <li class="cost">No cost per search</li>
           </ul>
-          <a class="btn btn-pricing" href="http://dashboard.allmyles.com/">Sign up</a>
+          <a class="btn btn-pricing" href="https://dashboard.allmyles.com/signup">Sign up</a>
         </div>
         <div class="col-md-4">
           <h3>geek</h3>
@@ -152,7 +152,7 @@ title: Allmyles
             <li> cool and the staff (scroll down for details)<sup>2</sup></li>
             <li class="cost">0.09 EUR per search</li>
           </ul>
-          <a class="btn btn-pricing" href="http://dashboard.allmyles.com/">Sign up</a>
+          <a class="btn btn-pricing" href="https://dashboard.allmyles.com/signup">Sign up</a>
         </div>
         <div class="col-md-4">
           <h3>growth hacker</h3>
@@ -166,7 +166,7 @@ title: Allmyles
             <li> cool and the staff (scroll down for details)<sup>2</sup></li>
             <li class="cost">0.06 EUR per search</li>
           </ul>
-          <a class="btn btn-pricing" href="http://dashboard.allmyles.com/">Sign up</a>
+          <a class="btn btn-pricing" href="https://dashboard.allmyles.com/signup">Sign up</a>
         </div>
       </div>
       <div class="custom-package">
