--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: base
 title: Allmyles API
+type: website
 description: Travel API from Allmyles Our Travel API provides non travel industry professionals access to global and bookable travel content to build innovative web or native apps. You can provide your customer with the best flight fares, hotel rates and car rental rates thus creating your Y-gen travel reseller.
 image: /img/allmyles_logo.png
 ---
