--- a/what_we_do.html
+++ b/what_we_do.html
@@ -1,6 +1,7 @@
 ---
 layout: base
-title: What We Do - Allmyles
+title: Travel API - What Allmyles Thinks Different
+description: Travel API by Allmyles Our Travel API provides non travel industry professionals access to global and bookable travel content to build innovative web or native apps. You can provide your customer with the best flight fares, hotel rates and car rental rates thus creating your Y-gen travel reseller.
 ---
 
 <div class="page page-what_we_do">
