--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ description: Travel API by Allmyles Our Travel API provides non travel industry 
 type: website
 seo:
   name: Allmyles
+  type: website
 ---
 
 <div class="page page-frontpage">
