--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ seo:
     <div class="inner">
       <div class="content">
         <h1>Sell travel online</h1>
-        <span>convert your visitors into travelers</span>
+        <span>RESTful API marketplace platform for everyday people</span>
         <a class="btn btn-get-started" href="https://dashboard.allmyles.com/signup">Get Started</a>
       </div>
     </div>
