--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ seo:
   <section id="featured-image-frontpage" class="page-section featured-image">
     <div class="inner">
       <div class="content">
-        <h1>Sell travel online</h1>
+        <h1>Plug In The World</h1>
         <span>RESTful API marketplace platform for everyday people</span>
         <a class="btn btn-get-started" href="https://dashboard.allmyles.com/signup">Get Started</a>
       </div>
