some creative changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ seo:
   <section id="featured-image-frontpage" class="page-section featured-image">
     <div class="inner">
       <div class="content">
-        <h1>Plug In The World</h1>
+        <h1>Plug The World</h1>
         <span>RESTful API marketplace platform for everyday people</span>
         <a class="btn btn-get-started" href="https://dashboard.allmyles.com/signup">Get Started</a>
       </div>
@@ -21,9 +21,9 @@ seo:
 
   <div class="container">
     <section id="hello" class="page-section">
-      <h2 class="text-uppercase">Imagine the easiest bookable content integrated...</h2>
-      <p class="text-uppercase">…with your website, holding your brand yielding for you</p>
-      <p>the very first full featured SaaS RESTful API consolidator of global bookable travel content with online clearance clutch</p>
+      <h2 class="text-uppercase">easiest integration of global bookable content...</h2>
+      <p class="text-uppercase">…your app, your brand, your profit</p>
+      <p>the very first full featured SaaS RESTful API consolidator of global bookable travel content with seamless clearance</p>
     </section>
     <section id="about-us" class="page-section">
       <div class="row">
@@ -69,7 +69,7 @@ seo:
         </div>
         <div class="col-md-6">
           <h3>Fully automated travel merchant</h3>
-          <p>Imagine your online sales transactions including back office workflows completely touchless.
+          <p>Your online sales transactions and back office operations completely touchless.
           <p>Human is a creative, social animal. Let administrative tasks become automated. The war against paperwork already began.</p>
         </div>
       </div>
