some more context changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ seo:
 
   <div class="container">
     <section id="hello" class="page-section">
-      <h2 class="text-uppercase">easiest integration of global bookable content...</h2>
+      <h2 class="text-uppercase">3-step-integration of global & bookable flight/hotel/car rental content...</h2>
       <p class="text-uppercase">…your app, your brand, your profit</p>
       <p>the very first full featured SaaS RESTful API consolidator of global bookable travel content with seamless clearance</p>
     </section>
