--- a/what.html
+++ b/what.html
@@ -9,7 +9,7 @@ description: Travel API by Allmyles Our Travel API provides non travel industry 
     <div class="inner">
       <div class="content">
         <h1>What We Do</h1>
-        <span>to make it simple</span>
+        <span>we make travel content integration just happen</span>
 	      <a href="http://dashboard.allmyles.com/" class="btn btn-check-it-out">Check It Out</a>
       </div>
     </div>
