--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ seo:
     <section id="hello" class="page-section">
       <h2 class="text-uppercase">Travel API integration, global, bookable content, one contract...</h2>
       <p class="text-uppercase">…your app, your brand, your profit</p>
-      <p>the very first full featured SaaS RESTful API consolidator of global bookable travel content with seamless payment clearing</p>
+      <p>full featured SaaS RESTful Travel API consolidator of global bookable content with seamless financial clearing</p>
     </section>
     <section id="about-us" class="page-section">
       <div class="row">
