removing target group from slug

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: base
 title: Travel API by Allmyles
-description: Travel API by Allmyles Our Travel API provides non travel industry professionals access to global and bookable travel content to build innovative web or native apps. You can provide your customer with the best flight fares, hotel rates and car rental rates thus creating your Y-gen travel reseller.
+description: Travel API by Allmyles Our Travel API provides access to global and bookable travel content to build innovative web or native apps. You can provide your customer with the best flight fares, hotel rates and car rental rates thus creating your Y-gen travel reseller.
 type: website
 seo:
   name: Allmyles
