--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ seo:
     <div class="inner">
       <div class="content">
         <h1>Plug The World</h1>
-        <span>RESTful Travel API marketplace for everyday people</span>
+        <span>RESTful Travel API marketplace for startups...and innovators</span>
         <a class="btn btn-get-started" href="https://dashboard.allmyles.com/signup">Get Started</a>
       </div>
     </div>
@@ -21,7 +21,7 @@ seo:
 
   <div class="container">
     <section id="hello" class="page-section">
-      <h2 class="text-uppercase">Travel API integration, global, bookable content, one contract...</h2>
+      <h2 class="text-uppercase">single contract, global, bookable Travel API integration</h2>
       <p class="text-uppercase">…your app, your brand, your profit</p>
       <p>full featured SaaS RESTful Travel API consolidator of global bookable content with seamless financial clearing</p>
     </section>
