--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ seo:
     <div class="inner">
       <div class="content">
         <h1>Plug The World</h1>
-        <span>RESTful Travel API marketplace for startups...and innovators</span>
+        <span>Single Travel API contract for startups...and innovators</span>
         <a class="btn btn-get-started" href="https://dashboard.allmyles.com/signup">Get Started</a>
       </div>
     </div>
