--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ seo:
 
   <div class="container">
     <section id="hello" class="page-section">
-      <h2 class="text-uppercase">Travel API integration under single contract providing global and bookable content</h2>
+      <h2 class="text-uppercase">Travel API integration under single contract for global and bookable content</h2>
       <p class="text-uppercase">…your app, your brand, your profit</p>
       <p>full featured SaaS RESTful Travel API consolidator of global bookable content with seamless financial clearing</p>
     </section>
