enrich keywords in paragraphs

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ seo:
         </div>
         <div class="col-md-6">
           <h3>Fully automated travel merchant</h3>
-          <p>Your online sales transactions and back office operations completely touchless.
+          <p>Your online sales transactions and back office operations completely touchless. Allmyles Travel API provides an innovative platform for you to build flight, hotel and car rental reseller apps.
           <p>Human is a creative, social animal. Let administrative tasks become automated. The war against paperwork already began.</p>
         </div>
       </div>
