keyword density vol2

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ seo:
       <div class="row">
         <div class="col-md-6">
           <h3>Inspire your audience</h3>
-          <p class="text-justify">Digital natives, web-designers, copywriters, growth hackers know how to generate leads. Why don't you start monetising your visitors, activate user base or find newcomers? Authentic content rules, let's find your niche market together.</p>
+          <p class="text-justify">Digital natives, web-designers, copywriters, growth hackers know how to generate leads. Why don't you start monetising your visitors, activate user base or find newcomers? Authentic content rules, let's find your niche market together. We porvide you with the best flight fares, hotel and car rental rates thus facilitating your customers' travel experience.</p>
         </div>
         <div class="col-md-6">
           <figure>
