--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ seo:
     <div class="inner">
       <div class="content">
         <h1>Plug The World</h1>
-        <span>Travel API hub for rebels</span>
+        <span>Travel APIs for rebels</span>
         <a class="btn btn-get-started" href="https://dashboard.allmyles.com/signup">Get Started</a>
       </div>
     </div>
@@ -21,7 +21,7 @@ seo:
 
   <div class="container">
     <section id="hello" class="page-section">
-      <h2 class="text-uppercase">Travel API integration under single contract for global and bookable content</h2>
+      <h2 class="text-uppercase">Travel API lets you directly connect you to global and bookable travel content to create your own website or app. Your visitors can instantly book the best flight deals, hotel prices and car rental rates globally. Provide them with an end to end user journey under single contract</h2>
       <p class="text-uppercase">…your app, your brand, your profit</p>
       <p>full featured SaaS RESTful Travel API consolidator of global bookable content with seamless financial clearing</p>
     </section>
