further context changes

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ seo:
 
   <div class="container">
     <section id="hello" class="page-section">
-      <h2 class="text-uppercase">Travel API lets you directly connect you to global and bookable travel content to create your own website or app. Your visitors can instantly book the best flight deals, hotel prices and car rental rates globally. Provide them with an end to end user journey under single contract</h2>
-      <p class="text-uppercase">…your app, your brand, your profit</p>
+      <h2 class="text-uppercase">Travel API lets you directly plug your own website or app to a global and bookable travel content to create your own website or app.</h2>
+      <p class="text-uppercase"> Your visitors can instantly book the best deals on our flight, hotel and car rentals globally. Provide them with seamless user journey under a single contract on your website or app, under your brand, making your profit</p>
       <p>full featured SaaS RESTful Travel API consolidator of global bookable content with seamless financial clearing</p>
     </section>
     <section id="about-us" class="page-section">
