--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ seo:
 
   <div class="container">
     <section id="hello" class="page-section">
-      <h2 class="text-uppercase">Travel API lets you directly plug your own website or app to a global and bookable travel content to create your own website or app.</h2>
+      <h2 class="text-uppercase">Travel API lets you directly plug your own website or app to a global and bookable travel content.</h2>
       <p class="text-uppercase"> Your visitors can instantly book the best deals on our flight, hotel and car rentals globally. Provide them with seamless user journey under a single contract on your website or app, under your brand, making your profit</p>
       <p>full featured SaaS RESTful Travel API consolidator of global bookable content with seamless financial clearing</p>
     </section>
