under your brand removed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ seo:
   <div class="container">
     <section id="hello" class="page-section">
       <h2 class="text-uppercase">Allmyles Travel API lets you directly plug your own website or app to the global bookable travel content.</h2>
-      <p class="text-uppercase"> Instant purchase experience of the best flight, hotel and car rental deals. Seamless user journey under a single contract under your brand</p>
+      <p class="text-uppercase"> Instant purchase experience of the best flight, hotel and car rental deals. Seamless user journey under a single contract</p>
       <p>full featured SaaS RESTful Travel API consolidator</p>
     </section>
     <section id="about-us" class="page-section">
