--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ seo:
 
   <div class="container">
     <section id="hello" class="page-section">
-      <h2 class="text-uppercase">Travel APIs to plug an app to the global revenue stream.</h2>
+      <h2 class="text-uppercase">Travel APIs that plug your app to the global revenue stream.</h2>
       <p class="text-uppercase"> Instant purchase experience of the best flight, hotel and car rental deals. Seamless user journey under a single contract</p>
       <p>the only full featured SaaS RESTful Travel API consolidator without preriquisites</p>
     </section>
