--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ seo:
             <img class="img-responsive center-block" src="/img/frontpage/chart.png" alt="chart">
           </figure>
           <div class="text">
-            <h3>Scalability</h3>
-            <p>full featured SaaS directly from the cloud without limitation</p>
+            <h3>Scalable</h3>
+            <p>designed for startups with rocket growth</p>
           </div>
         </div>
         <div class="col-md-4">
@@ -41,8 +41,8 @@ seo:
             <img class="img-responsive center-block" src="/img/frontpage/tools.png" alt="tools">
           </figure>
           <div class="text">
-            <h3>Continuous Integration</h3>
-            <p>global travel content in your hands enriching on a daily basis</p>
+            <h3>Agile</h3>
+            <p>continuous integration of global content</p>
           </div>
         </div>
         <div class="col-md-4">
@@ -50,8 +50,8 @@ seo:
             <img class="img-responsive center-block" src="/img/frontpage/card.png" alt="credit card">
           </figure>
           <div class="text">
-            <h3>Payment Clutch</h3>
-            <p>payment and clearing robot for fully automated sales processes</p>
+            <h3>Autoclearing</h3>
+            <p>fully automated, provider agnostic payments</p>
           </div>
         </div>
       </div>
