--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ seo:
             <img class="img-responsive center-block" src="/img/frontpage/card.png" alt="credit card">
           </figure>
           <div class="text">
-            <h3>Autoclearing</h3>
+            <h3>Transparent</h3>
             <p>fully automated, provider agnostic payments</p>
           </div>
         </div>
