--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ seo:
   <section id="featured-image-frontpage" class="page-section featured-image">
     <div class="inner">
       <div class="content">
-        <h1>Plug The World</h1>
+        <h1>Plug The World within 30 days</h1>
         <span>Travel APIs for the rebels</span>
         <a class="btn btn-get-started" href="https://dashboard.allmyles.com/signup">Get Started</a>
       </div>
