--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ seo:
     <div class="inner">
       <div class="content">
         <h1>travel app in 30 days</h1>
-        <span>Travel APIs for the rebels</span>
+        <span>easy to use travel APIs for digital natives</span>
         <a class="btn btn-get-started" href="https://dashboard.allmyles.com/signup">Get Started</a>
       </div>
     </div>
