--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ seo:
 
   <div class="container">
     <section id="hello" class="page-section">
-      <h2 class="text-uppercase">Travel APIs that plug your app to the global revenue stream</h2>
-      <p class="text-uppercase"> Instant purchase experience of the best flight, hotel and car rental deals. Seamless user journey under a single contract</p>
-      <p>the only full featured SaaS RESTful Travel API consolidator without preriquisites</p>
+      <h2 class="text-uppercase">Travel APIs for booking the best global flight, hotel and car rental deals</h2>
+      <p class="text-uppercase">Seamless user journey under a single contract of the very first full featured SaaS RESTful Travel API consolidator. Instant purchase experience of the best flight, hotel and car rental deals. </p>
+      <p></p>
     </section>
     <section id="about-us" class="page-section">
       <div class="row">
