get a free api key

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ seo:
       <div class="content">
         <h1>travel app in 30 days</h1>
         <span>easy to use travel APIs for digital natives</span>
-        <a class="btn btn-get-started" href="https://dashboard.allmyles.com/signup">Get Started</a>
+        <a class="btn btn-get-started" href="https://dashboard.allmyles.com/signup">Get a free API key</a>
       </div>
     </div>
   </section>
