change initials in heading

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ seo:
   <section id="featured-image-frontpage" class="page-section featured-image">
     <div class="inner">
       <div class="content">
-        <h1>build your travel app in 30 days</h1>
+        <h1>Build your travel app in 30 days</h1>
         <span>easy to use travel APIs for digital natives</span>
         <a class="btn btn-get-started" href="https://dashboard.allmyles.com/signup">Get a free API key</a>
       </div>
