remove text-uppercase class from hello section

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ seo:
 
   <div class="container">
     <section id="hello" class="page-section">
-      <h2 class="text-uppercase">Travel APIs for booking the best global flight, hotel and car rental deals</h2>
-      <p class="text-uppercase">Seamless user journey under a single contract of the very first full featured SaaS RESTful Travel API consolidator.</p>
+      <h2>Travel APIs for booking the best global flight, hotel and car rental deals</h2>
+      <p>Seamless user journey under a single contract of the very first full featured SaaS RESTful Travel API consolidator.</p>
       <p>Instant purchase experience for your visitors. </p>
     </section>
     <section id="about-us" class="page-section">
