--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ seo:
   <div class="container">
     <section id="hello" class="page-section">
       <h2>Travel APIs for booking the best global flight, hotel and car rental deals</h2>
-      <p>Seamless user journey under a single contract of the very first full featured SaaS RESTful Travel API consolidator.</p>
+      <h3>Seamless user journey under a single contract of the very first full featured SaaS RESTful Travel API consolidator.</h3>
       <p>Instant purchase experience for your visitors. </p>
     </section>
     <section id="about-us" class="page-section">
